// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCards component should render loading state 1`] = `
<IntlProvider
  defaultFormats={{}}
  defaultLocale="en"
  fallbackOnEmptyString={true}
  formats={{}}
  locale="en-US"
  messages={{}}
  onError={[Function]}
  onWarn={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <SystemPolicyCards
    loading={true}
    policies={
      [
        {
          "benchmark": {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13.000Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "policyType": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
          "supported": true,
        },
        {
          "benchmark": {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "policyType": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
          "supported": true,
        },
      ]
    }
  >
    <Grid
      hasGutter={true}
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              onClick={[Function]}
              policy={
                {
                  "benchmark": {
                    "version": "0.1.45",
                  },
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13.000Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "policyType": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                  "supported": true,
                }
              }
              style={
                {
                  "height": "100%",
                }
              }
            >
              <Card
                onClick={[Function]}
                ouiaId="PolicyCard"
                style={
                  {
                    "height": "100%",
                  }
                }
              >
                <article
                  className="pf-c-card"
                  data-ouia-component-id="PolicyCard"
                  data-ouia-component-type="PF4/Card"
                  data-ouia-safe={true}
                  id=""
                  onClick={[Function]}
                  style={
                    {
                      "height": "100%",
                    }
                  }
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            ouiaId="PolicyCardName"
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-ouia-component-id="PolicyCardName"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              <Truncate
                                expandOnMouseOver={true}
                                hideExpandText={true}
                                length={110}
                                text="PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7"
                              >
                                <Stack
                                  className="ins-c-truncate is-block"
                                >
                                  <div
                                    className="pf-l-stack ins-c-truncate is-block"
                                  >
                                    <StackItem
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    >
                                      <div
                                        className="pf-l-stack__item"
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                      >
                                        <span
                                          dangerouslySetInnerHTML={
                                            {
                                              "__html": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                                            }
                                          }
                                          widget-type="InsightsTruncateBlock"
                                        />
                                      </div>
                                    </StackItem>
                                  </div>
                                </Stack>
                              </Truncate>
                            </h4>
                          </Text>
                          <Text
                            component="small"
                            ouiaId="PolicyCardType"
                            style={
                              {
                                "color": "var(--pf-global--Color--200)",
                              }
                            }
                          >
                            <small
                              className=""
                              data-ouia-component-id="PolicyCardType"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                              style={
                                {
                                  "color": "var(--pf-global--Color--200)",
                                }
                              }
                            >
                              <Truncate
                                expandOnMouseOver={true}
                                hideExpandText={true}
                                length={110}
                                text="PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7"
                              >
                                <Stack
                                  className="ins-c-truncate is-block"
                                >
                                  <div
                                    className="pf-l-stack ins-c-truncate is-block"
                                  >
                                    <StackItem
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    >
                                      <div
                                        className="pf-l-stack__item"
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                      >
                                        <span
                                          dangerouslySetInnerHTML={
                                            {
                                              "__html": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                                            }
                                          }
                                          widget-type="InsightsTruncateBlock"
                                        />
                                      </div>
                                    </StackItem>
                                  </div>
                                </Stack>
                              </Truncate>
                            </small>
                          </Text>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Not compliant
                        </div>
                        <Text
                          component="small"
                          ouiaId="PolicyCardFailedRulesScore"
                        >
                          <small
                            className=""
                            data-ouia-component-id="PolicyCardFailedRulesScore"
                            data-ouia-component-type="PF4/Text"
                            data-ouia-safe={true}
                            data-pf-content={true}
                          >
                            10
                             rule
                            s
                             failed
                             
                            <Tooltip
                              content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                              maxWidth="22em"
                              position="bottom"
                            >
                              <Popper
                                appendTo={[Function]}
                                distance={15}
                                enableFlip={true}
                                flipBehavior={
                                  [
                                    "top",
                                    "right",
                                    "bottom",
                                    "left",
                                    "top",
                                    "right",
                                    "bottom",
                                  ]
                                }
                                isVisible={false}
                                onBlur={[Function]}
                                onDocumentClick={false}
                                onDocumentKeyDown={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                onPopperMouseEnter={[Function]}
                                onPopperMouseLeave={[Function]}
                                onTriggerEnter={[Function]}
                                placement="bottom"
                                popper={
                                  <div
                                    aria-live="off"
                                    className="pf-c-tooltip"
                                    id="pf-tooltip-1"
                                    role="tooltip"
                                    style={
                                      {
                                        "maxWidth": "22em",
                                        "opacity": 0,
                                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                      }
                                    }
                                  >
                                    <TooltipArrow />
                                    <TooltipContent
                                      isLeftAligned={false}
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </TooltipContent>
                                  </div>
                                }
                                popperMatchesTriggerWidth={false}
                                positionModifiers={
                                  {
                                    "bottom": "pf-m-bottom",
                                    "bottom-end": "pf-m-bottom-right",
                                    "bottom-start": "pf-m-bottom-left",
                                    "left": "pf-m-left",
                                    "left-end": "pf-m-left-bottom",
                                    "left-start": "pf-m-left-top",
                                    "right": "pf-m-right",
                                    "right-end": "pf-m-right-bottom",
                                    "right-start": "pf-m-right-top",
                                    "top": "pf-m-top",
                                    "top-end": "pf-m-top-right",
                                    "top-start": "pf-m-top-left",
                                  }
                                }
                                removeFindDomNode={false}
                                trigger={
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                }
                                zIndex={9999}
                              >
                                <FindRefWrapper
                                  onFoundRef={[Function]}
                                >
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                </FindRefWrapper>
                              </Popper>
                            </Tooltip>
                          </small>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-ouia-component-id="OUIA-Generated-Text-4"
                          data-ouia-component-type="PF4/Text"
                          data-ouia-safe={true}
                          data-pf-content={true}
                        >
                          <Text
                            ouiaId="PolicyCardSSGVersion"
                          >
                            <p
                              className=""
                              data-ouia-component-id="PolicyCardSSGVersion"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              SSG version: 
                              0.1.45
                            </p>
                          </Text>
                          <Text
                            ouiaId="PolicyCardLastScanned"
                          >
                            <p
                              className=""
                              data-ouia-component-id="PolicyCardLastScanned"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              Last scanned:
                               
                              <DateFormat
                                date={1551853213000}
                                type="relative"
                              >
                                <Tooltip
                                  content={
                                    <div>
                                      
                                      06 Mar 2019 06:20 UTC
                                    </div>
                                  }
                                >
                                  <Popper
                                    appendTo={[Function]}
                                    distance={15}
                                    enableFlip={true}
                                    flipBehavior={
                                      [
                                        "top",
                                        "right",
                                        "bottom",
                                        "left",
                                        "top",
                                        "right",
                                        "bottom",
                                      ]
                                    }
                                    isVisible={false}
                                    onBlur={[Function]}
                                    onDocumentClick={false}
                                    onDocumentKeyDown={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    onPopperMouseEnter={[Function]}
                                    onPopperMouseLeave={[Function]}
                                    onTriggerEnter={[Function]}
                                    placement="top"
                                    popper={
                                      <div
                                        aria-live="off"
                                        className="pf-c-tooltip"
                                        id="pf-tooltip-2"
                                        role="tooltip"
                                        style={
                                          {
                                            "maxWidth": null,
                                            "opacity": 0,
                                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                          }
                                        }
                                      >
                                        <TooltipArrow />
                                        <TooltipContent
                                          isLeftAligned={false}
                                        >
                                          <div>
                                            
                                            06 Mar 2019 06:20 UTC
                                          </div>
                                        </TooltipContent>
                                      </div>
                                    }
                                    popperMatchesTriggerWidth={false}
                                    positionModifiers={
                                      {
                                        "bottom": "pf-m-bottom",
                                        "bottom-end": "pf-m-bottom-right",
                                        "bottom-start": "pf-m-bottom-left",
                                        "left": "pf-m-left",
                                        "left-end": "pf-m-left-bottom",
                                        "left-start": "pf-m-left-top",
                                        "right": "pf-m-right",
                                        "right-end": "pf-m-right-bottom",
                                        "right-start": "pf-m-right-top",
                                        "top": "pf-m-top",
                                        "top-end": "pf-m-top-right",
                                        "top-start": "pf-m-top-left",
                                      }
                                    }
                                    removeFindDomNode={false}
                                    trigger={
                                      <span>
                                        2 years ago
                                      </span>
                                    }
                                    zIndex={9999}
                                  >
                                    <FindRefWrapper
                                      onFoundRef={[Function]}
                                    >
                                      <span>
                                        2 years ago
                                      </span>
                                    </FindRefWrapper>
                                  </Popper>
                                </Tooltip>
                              </DateFormat>
                            </p>
                          </Text>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
        <GridItem
          key="0"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-2"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="1"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-3"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="2"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-4"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;

exports[`SystemPolicyCards component should render real table 1`] = `
<IntlProvider
  defaultFormats={{}}
  defaultLocale="en"
  fallbackOnEmptyString={true}
  formats={{}}
  locale="en-US"
  messages={{}}
  onError={[Function]}
  onWarn={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <SystemPolicyCards
    loading={false}
    policies={
      [
        {
          "benchmark": {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13.000Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "policyType": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
          "supported": true,
        },
        {
          "benchmark": {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "policyType": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
          "supported": true,
        },
      ]
    }
  >
    <Grid
      hasGutter={true}
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              onClick={[Function]}
              policy={
                {
                  "benchmark": {
                    "version": "0.1.45",
                  },
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13.000Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "policyType": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                  "supported": true,
                }
              }
              style={
                {
                  "height": "100%",
                }
              }
            >
              <Card
                onClick={[Function]}
                ouiaId="PolicyCard"
                style={
                  {
                    "height": "100%",
                  }
                }
              >
                <article
                  className="pf-c-card"
                  data-ouia-component-id="PolicyCard"
                  data-ouia-component-type="PF4/Card"
                  data-ouia-safe={true}
                  id=""
                  onClick={[Function]}
                  style={
                    {
                      "height": "100%",
                    }
                  }
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            ouiaId="PolicyCardName"
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-ouia-component-id="PolicyCardName"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              <Truncate
                                expandOnMouseOver={true}
                                hideExpandText={true}
                                length={110}
                                text="PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7"
                              >
                                <Stack
                                  className="ins-c-truncate is-block"
                                >
                                  <div
                                    className="pf-l-stack ins-c-truncate is-block"
                                  >
                                    <StackItem
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    >
                                      <div
                                        className="pf-l-stack__item"
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                      >
                                        <span
                                          dangerouslySetInnerHTML={
                                            {
                                              "__html": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                                            }
                                          }
                                          widget-type="InsightsTruncateBlock"
                                        />
                                      </div>
                                    </StackItem>
                                  </div>
                                </Stack>
                              </Truncate>
                            </h4>
                          </Text>
                          <Text
                            component="small"
                            ouiaId="PolicyCardType"
                            style={
                              {
                                "color": "var(--pf-global--Color--200)",
                              }
                            }
                          >
                            <small
                              className=""
                              data-ouia-component-id="PolicyCardType"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                              style={
                                {
                                  "color": "var(--pf-global--Color--200)",
                                }
                              }
                            >
                              <Truncate
                                expandOnMouseOver={true}
                                hideExpandText={true}
                                length={110}
                                text="PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7"
                              >
                                <Stack
                                  className="ins-c-truncate is-block"
                                >
                                  <div
                                    className="pf-l-stack ins-c-truncate is-block"
                                  >
                                    <StackItem
                                      onMouseEnter={[Function]}
                                      onMouseLeave={[Function]}
                                    >
                                      <div
                                        className="pf-l-stack__item"
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                      >
                                        <span
                                          dangerouslySetInnerHTML={
                                            {
                                              "__html": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                                            }
                                          }
                                          widget-type="InsightsTruncateBlock"
                                        />
                                      </div>
                                    </StackItem>
                                  </div>
                                </Stack>
                              </Truncate>
                            </small>
                          </Text>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Not compliant
                        </div>
                        <Text
                          component="small"
                          ouiaId="PolicyCardFailedRulesScore"
                        >
                          <small
                            className=""
                            data-ouia-component-id="PolicyCardFailedRulesScore"
                            data-ouia-component-type="PF4/Text"
                            data-ouia-safe={true}
                            data-pf-content={true}
                          >
                            10
                             rule
                            s
                             failed
                             
                            <Tooltip
                              content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                              maxWidth="22em"
                              position="bottom"
                            >
                              <Popper
                                appendTo={[Function]}
                                distance={15}
                                enableFlip={true}
                                flipBehavior={
                                  [
                                    "top",
                                    "right",
                                    "bottom",
                                    "left",
                                    "top",
                                    "right",
                                    "bottom",
                                  ]
                                }
                                isVisible={false}
                                onBlur={[Function]}
                                onDocumentClick={false}
                                onDocumentKeyDown={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                onPopperMouseEnter={[Function]}
                                onPopperMouseLeave={[Function]}
                                onTriggerEnter={[Function]}
                                placement="bottom"
                                popper={
                                  <div
                                    aria-live="off"
                                    className="pf-c-tooltip"
                                    id="pf-tooltip-3"
                                    role="tooltip"
                                    style={
                                      {
                                        "maxWidth": "22em",
                                        "opacity": 0,
                                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                      }
                                    }
                                  >
                                    <TooltipArrow />
                                    <TooltipContent
                                      isLeftAligned={false}
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </TooltipContent>
                                  </div>
                                }
                                popperMatchesTriggerWidth={false}
                                positionModifiers={
                                  {
                                    "bottom": "pf-m-bottom",
                                    "bottom-end": "pf-m-bottom-right",
                                    "bottom-start": "pf-m-bottom-left",
                                    "left": "pf-m-left",
                                    "left-end": "pf-m-left-bottom",
                                    "left-start": "pf-m-left-top",
                                    "right": "pf-m-right",
                                    "right-end": "pf-m-right-bottom",
                                    "right-start": "pf-m-right-top",
                                    "top": "pf-m-top",
                                    "top-end": "pf-m-top-right",
                                    "top-start": "pf-m-top-left",
                                  }
                                }
                                removeFindDomNode={false}
                                trigger={
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                }
                                zIndex={9999}
                              >
                                <FindRefWrapper
                                  onFoundRef={[Function]}
                                >
                                  <span>
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                </FindRefWrapper>
                              </Popper>
                            </Tooltip>
                          </small>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-ouia-component-id="OUIA-Generated-Text-10"
                          data-ouia-component-type="PF4/Text"
                          data-ouia-safe={true}
                          data-pf-content={true}
                        >
                          <Text
                            ouiaId="PolicyCardSSGVersion"
                          >
                            <p
                              className=""
                              data-ouia-component-id="PolicyCardSSGVersion"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              SSG version: 
                              0.1.45
                            </p>
                          </Text>
                          <Text
                            ouiaId="PolicyCardLastScanned"
                          >
                            <p
                              className=""
                              data-ouia-component-id="PolicyCardLastScanned"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              Last scanned:
                               
                              <DateFormat
                                date={1551853213000}
                                type="relative"
                              >
                                <Tooltip
                                  content={
                                    <div>
                                      
                                      06 Mar 2019 06:20 UTC
                                    </div>
                                  }
                                >
                                  <Popper
                                    appendTo={[Function]}
                                    distance={15}
                                    enableFlip={true}
                                    flipBehavior={
                                      [
                                        "top",
                                        "right",
                                        "bottom",
                                        "left",
                                        "top",
                                        "right",
                                        "bottom",
                                      ]
                                    }
                                    isVisible={false}
                                    onBlur={[Function]}
                                    onDocumentClick={false}
                                    onDocumentKeyDown={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    onPopperMouseEnter={[Function]}
                                    onPopperMouseLeave={[Function]}
                                    onTriggerEnter={[Function]}
                                    placement="top"
                                    popper={
                                      <div
                                        aria-live="off"
                                        className="pf-c-tooltip"
                                        id="pf-tooltip-4"
                                        role="tooltip"
                                        style={
                                          {
                                            "maxWidth": null,
                                            "opacity": 0,
                                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                          }
                                        }
                                      >
                                        <TooltipArrow />
                                        <TooltipContent
                                          isLeftAligned={false}
                                        >
                                          <div>
                                            
                                            06 Mar 2019 06:20 UTC
                                          </div>
                                        </TooltipContent>
                                      </div>
                                    }
                                    popperMatchesTriggerWidth={false}
                                    positionModifiers={
                                      {
                                        "bottom": "pf-m-bottom",
                                        "bottom-end": "pf-m-bottom-right",
                                        "bottom-start": "pf-m-bottom-left",
                                        "left": "pf-m-left",
                                        "left-end": "pf-m-left-bottom",
                                        "left-start": "pf-m-left-top",
                                        "right": "pf-m-right",
                                        "right-end": "pf-m-right-bottom",
                                        "right-start": "pf-m-right-top",
                                        "top": "pf-m-top",
                                        "top-end": "pf-m-top-right",
                                        "top-start": "pf-m-top-left",
                                      }
                                    }
                                    removeFindDomNode={false}
                                    trigger={
                                      <span>
                                        2 years ago
                                      </span>
                                    }
                                    zIndex={9999}
                                  >
                                    <FindRefWrapper
                                      onFoundRef={[Function]}
                                    >
                                      <span>
                                        2 years ago
                                      </span>
                                    </FindRefWrapper>
                                  </Popper>
                                </Tooltip>
                              </DateFormat>
                            </p>
                          </Text>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;
